added Pre Processing

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -1,16 +1,438 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Demografische Entwicklung Wiens seit 2008: Analyse der\n",
+    "## Bevölkerungsstruktur und Geburtenentwicklung auf\n",
+    "## Bezirksebene\n",
+    "<u>**Big Data Projekt von:**</u>\n",
+    "<br>\n",
+    "Johannes Reitterer <br>\n",
+    "Johannes Mantler <br>\n",
+    "Nicolas Nemeth <br>\n",
+    "<br>"
+   ],
+   "id": "f5cf04f25b6738a3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "**Imports**",
+   "id": "740b57934bff4d1c"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
+   "source": [
+    "import pandas as pd\n",
+    "import io\n",
+    "import requests"
+   ],
+   "id": "525e698f13ddee9b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Data Preprocessing (Extraction, Transform, Load) <br>\n",
+    "\n",
+    "\n",
+    "### 1. Verwendete Datenquellen\n",
+    "Wir nutzen zwei offene Datensätze (Open Government Data) der Stadt Wien:\n",
+    "\n",
+    "* **Datensatz A: Bevölkerung nach Geburtsbundesland (seit 2008)**\n",
+    "    * **Inhalt:** Bevölkerungsstand pro Bezirk, detailliert aufgeschlüsselt nach Alter (5-Jahresgruppen), Geschlecht und Herkunft (9 Bundesländer + Ausland).\n",
+    "    * **Quelle:** Stadt Wien - OGD.\n",
+    "\n",
+    "* **Datensatz B: Geburten pro Bezirk (seit 2002)**\n",
+    "    * **Inhalt:** Anzahl der Lebendgeburten pro Bezirk, Jahr und Geschlecht des Kindes.\n",
+    "    * **Quelle:** Stadt Wien - OGD - Bevölkerung zu Beginn & Geburten.\n",
+    "\n",
+    "### 2. Implementierte Transformationsschritte (Preprocessing)\n",
+    "Um die Daten analysierbar zu machen, werden folgende Bereinigungen durchgeführt:\n",
+    "\n",
+    "1.  **Extraction:** Direkter Abruf der aktuellsten `.csv`-Dateien über die Schnittstelle der Stadt Wien.\n",
+    "2.  **Standardisierung:**\n",
+    "    * Umcodierung der Bezirks-Kennziffern von `90100` (OGD-Standard) auf `1010` (Allgemeiner Standard).\n",
+    "    * Umbenennung kryptischer Spalten (z.B. `BGD` → `Burgenland`, `REF_YEAR` → `Jahr`).\n",
+    "3.  **Data Quality & Imputation:**\n",
+    "    * Auffüllen fehlender Werte (`NaN`) mit `0`.\n",
+    "    * Typ-Konvertierung in Integer (Ganzzahlen).\n",
+    "    * Sanity Check: Bereinigung unlogischer negativer Werte.\n",
+    "4.  **Loading:** Speicherung als `cleaned_population.csv` und `cleaned_births.csv` für die weitere Modellierung.\n"
+   ],
+   "id": "98b596e4455b9363"
+  },
+  {
+   "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2026-01-06T19:01:43.384390Z",
+     "start_time": "2026-01-06T19:01:41.746740Z"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
-   ]
+    "URL_BEVOELKERUNG = \"https://www.wien.gv.at/gogv/l9ogdviebezpopsexage5stkcobgeoat102008f\"\n",
+    "URL_GEBURTEN = \"https://www.wien.gv.at/gogv/l9ogdviebezpopsexbir2002f\"\n",
+    "\n",
+    "\n",
+    "def clean_bezirk(code):\n",
+    "    #Wandelt 90100 in 1010 um.\n",
+    "    try:\n",
+    "        code_str = str(code)\n",
+    "        # Prüfen ob Format 9xxxx\n",
+    "        if len(code_str) == 5 and code_str.startswith('9'):\n",
+    "            bez_num = code_str[1:3]\n",
+    "            return int(f\"1{bez_num}0\")\n",
+    "        return code \n",
+    "    except:\n",
+    "        return 0\n",
+    "\n",
+    "def run_data_pipeline():\n",
+    "    print(\"Pipeline gestartet: \")\n",
+    "    \n",
+    "    #1. EXTRACTION\n",
+    "    try:\n",
+    "        print(\"Lade Daten von data.wien.gv.at...\")\n",
+    "        \n",
+    "        df_pop = pd.read_csv(URL_BEVOELKERUNG, sep=';', header=1, encoding='utf-8') #header 1 da erste Zeile Column Namen sind\n",
+    "        df_birth = pd.read_csv(URL_GEBURTEN, sep=';', header=1, encoding='utf-8')\n",
+    "    except Exception as e:\n",
+    "        print(f\"Fehler beim Download: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "    #2. TRANSFORMATION\n",
+    "    print(\" Bereinige Bevölkerungsdaten...\")\n",
+    "    \n",
+    "    df_pop = df_pop.rename(columns={\n",
+    "        'REF_YEAR': 'Jahr', \n",
+    "        'DISTRICT_CODE': 'Bezirk_Roh', \n",
+    "        'SEX': 'Geschlecht', \n",
+    "        'AGE5': 'Alter_Gruppe',\n",
+    "        'BGD': 'Burgenland', 'KTN': 'Kaernten', 'NOE': 'Niederoesterreich',\n",
+    "        'OOE': 'Oberoesterreich', 'SBG': 'Salzburg', 'STK': 'Steiermark',\n",
+    "        'TIR': 'Tirol', 'VBG': 'Vorarlberg', 'VIE': 'Wien',\n",
+    "        'FOR': 'Ausland', 'UNK': 'Unbekannt'\n",
+    "    })\n",
+    "\n",
+    "    df_pop['Bezirk'] = df_pop['Bezirk_Roh'].apply(clean_bezirk)\n",
+    "\n",
+    "    #Fehlende Werte (NaN) durch 0 ersetzen und Datentypen (int) fixen\n",
+    "    cols_check = ['Burgenland', 'Kaernten', 'Niederoesterreich', 'Oberoesterreich', \n",
+    "                  'Salzburg', 'Steiermark', 'Tirol', 'Vorarlberg', 'Wien', \n",
+    "                  'Ausland', 'Unbekannt']\n",
+    "    \n",
+    "    df_pop[cols_check] = df_pop[cols_check].fillna(0).astype(int)\n",
+    "    \n",
+    "    #Negative Werte entfernen\n",
+    "    for col in cols_check:\n",
+    "        df_pop.loc[df_pop[col] < 0, col] = 0\n",
+    "        \n",
+    "    # Nur die sauberen Spalten behalten\n",
+    "    final_pop_cols = ['Jahr', 'Bezirk', 'Geschlecht', 'Alter_Gruppe'] + cols_check\n",
+    "    df_pop = df_pop[final_pop_cols]\n",
+    "\n",
+    "    print(\"Bereinige Geburtsdaten...\")\n",
+    "    # Geburten bereinigen\n",
+    "    df_birth = df_birth.rename(columns={\n",
+    "        'REF_YEAR': 'Jahr',\n",
+    "        'DISTRICT_CODE': 'Bezirk_Roh', \n",
+    "        'SEX': 'Geschlecht',\n",
+    "        'BIR': 'Anzahl_Geburten'\n",
+    "    })\n",
+    "    \n",
+    "    df_birth['Bezirk'] = df_birth['Bezirk_Roh'].apply(clean_bezirk)\n",
+    "    df_birth['Anzahl_Geburten'] = df_birth['Anzahl_Geburten'].fillna(0).astype(int)\n",
+    "    \n",
+    "    \n",
+    "    df_birth = df_birth[['Jahr', 'Bezirk', 'Geschlecht', 'Anzahl_Geburten']]\n",
+    "\n",
+    "    print(\"Speichere CSV Dateien...\")\n",
+    "    \n",
+    "    df_pop.to_csv(\"cleaned_population.csv\", index=False)\n",
+    "    df_birth.to_csv(\"cleaned_births.csv\", index=False)\n",
+    "    \n",
+    "    print(\"Dateien 'cleaned_population.csv' und 'cleaned_births.csv' erstellt.\")\n",
+    "    return df_pop, df_birth\n",
+    "\n",
+    "\n",
+    "df_pop_clean, df_birth_clean = run_data_pipeline()\n",
+    "\n",
+    "print(\"\\n--- Vorschau Bevölkerung ---\")\n",
+    "display(df_pop_clean.head())\n",
+    "\n",
+    "print(\"\\n--- Vorschau Geburten ---\")\n",
+    "display(df_birth_clean.head())"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline gestartet: \n",
+      "Lade Daten von data.wien.gv.at...\n",
+      " Bereinige Bevölkerungsdaten...\n",
+      "Bereinige Geburtsdaten...\n",
+      "Speichere CSV Dateien...\n",
+      "Dateien 'cleaned_population.csv' und 'cleaned_births.csv' erstellt.\n",
+      "\n",
+      "--- Vorschau Bevölkerung ---\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "   Jahr  Bezirk  Geschlecht  Alter_Gruppe  Burgenland  Kaernten  \\\n",
+       "0  2008    1010           1             1           0         1   \n",
+       "1  2008    1010           1             2           0         1   \n",
+       "2  2008    1010           1             3           0         2   \n",
+       "3  2008    1010           1             4           2         2   \n",
+       "4  2008    1010           1             5           2         1   \n",
+       "\n",
+       "   Niederoesterreich  Oberoesterreich  Salzburg  Steiermark  Tirol  \\\n",
+       "0                  9                1         0           4      0   \n",
+       "1                  3                2         1           1      0   \n",
+       "2                  7                4         1           0      1   \n",
+       "3                  7                3         2           3      1   \n",
+       "4                 18                6         3           6      4   \n",
+       "\n",
+       "   Vorarlberg  Wien  Ausland  Unbekannt  \n",
+       "0           0   207       39          0  \n",
+       "1           0   202       44          0  \n",
+       "2           2   198       40          1  \n",
+       "3           2   201       72          3  \n",
+       "4           1   253      138          2  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Jahr</th>\n",
+       "      <th>Bezirk</th>\n",
+       "      <th>Geschlecht</th>\n",
+       "      <th>Alter_Gruppe</th>\n",
+       "      <th>Burgenland</th>\n",
+       "      <th>Kaernten</th>\n",
+       "      <th>Niederoesterreich</th>\n",
+       "      <th>Oberoesterreich</th>\n",
+       "      <th>Salzburg</th>\n",
+       "      <th>Steiermark</th>\n",
+       "      <th>Tirol</th>\n",
+       "      <th>Vorarlberg</th>\n",
+       "      <th>Wien</th>\n",
+       "      <th>Ausland</th>\n",
+       "      <th>Unbekannt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>1010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>207</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>1010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>202</td>\n",
+       "      <td>44</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>1010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>198</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>1010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>201</td>\n",
+       "      <td>72</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>1010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>253</td>\n",
+       "      <td>138</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Vorschau Geburten ---\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "   Jahr  Bezirk  Geschlecht  Anzahl_Geburten\n",
+       "0  2002    1010           1               58\n",
+       "1  2002    1010           2               72\n",
+       "2  2002    1020           1              490\n",
+       "3  2002    1020           2              491\n",
+       "4  2002    1030           1              370"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Jahr</th>\n",
+       "      <th>Bezirk</th>\n",
+       "      <th>Geschlecht</th>\n",
+       "      <th>Anzahl_Geburten</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>1010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>1010</td>\n",
+       "      <td>2</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>1</td>\n",
+       "      <td>490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>2</td>\n",
+       "      <td>491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>1030</td>\n",
+       "      <td>1</td>\n",
+       "      <td>370</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 11
   }
  ],
  "metadata": {
