Added Database Request Methods.

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -94,8 +94,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-07T20:56:07.120687Z",
-     "start_time": "2026-01-07T20:56:06.888235Z"
+     "end_time": "2026-01-07T21:13:06.919341Z",
+     "start_time": "2026-01-07T21:13:06.644245Z"
     }
    },
    "cell_type": "code",
@@ -386,6 +386,37 @@
     "    return df\n",
     "\n",
     "\n",
+    "def merge_data_sources(df_pop, df_birth):\n",
+    "    \"\"\"\n",
+    "    Merge multiple data sources appropriately.\n",
+    "    \"\"\"\n",
+    "    print(\"\\nMerging data sources...\")\n",
+    "    \n",
+    "    if 'Wien' in df_pop.columns:\n",
+    "        pop_agg = df_pop.groupby(['Jahr', 'Bezirk']).agg({\n",
+    "            'Wien': 'sum',\n",
+    "            'Ausland': 'sum',\n",
+    "            'Geschlecht': 'count'\n",
+    "        }).reset_index()\n",
+    "        pop_agg.rename(columns={'Geschlecht': 'Gesamt_Bevoelkerung'}, inplace=True)\n",
+    "    else:\n",
+    "        pop_agg = df_pop.groupby(['Jahr', 'Bezirk']).size().reset_index(name='Gesamt_Bevoelkerung')\n",
+    "    \n",
+    "    if 'Anzahl_Geburten' in df_birth.columns:\n",
+    "        birth_agg = df_birth.groupby(['Jahr', 'Bezirk']).agg({\n",
+    "            'Anzahl_Geburten': 'sum'\n",
+    "        }).reset_index()\n",
+    "    else:\n",
+    "        birth_agg = df_birth.groupby(['Jahr', 'Bezirk']).size().reset_index(name='Anzahl_Geburten')\n",
+    "    \n",
+    "    merged = pd.merge(pop_agg, birth_agg, on=['Jahr', 'Bezirk'], how='outer')\n",
+    "    merged = merged.fillna(0)\n",
+    "    \n",
+    "    print(f\"  Merged dataset: {len(merged):,} records\")\n",
+    "    \n",
+    "    return merged\n",
+    "\n",
+    "\n",
     "def transform_data(df_pop, df_birth):\n",
     "    \"\"\"\n",
     "    Apply transformations to both datasets.\n",
@@ -395,7 +426,7 @@
     "        df_birth: Raw birth DataFrame\n",
     "        \n",
     "    Returns:\n",
-    "        tuple: (cleaned_population_df, cleaned_birth_df)\n",
+    "        tuple: (cleaned_population_df, cleaned_birth_df, merged_df)\n",
     "    \"\"\"\n",
     "    print(\"\\n\" + \"=\"*70)\n",
     "    print(\"PHASE 2: TRANSFORM\")\n",
@@ -403,11 +434,84 @@
     "    \n",
     "    df_pop_clean = transform_population_data(df_pop)\n",
     "    df_birth_clean = transform_birth_data(df_birth)\n",
+    "    df_merged = merge_data_sources(df_pop_clean, df_birth_clean)\n",
     "    \n",
-    "    return df_pop_clean, df_birth_clean\n",
+    "    return df_pop_clean, df_birth_clean, df_merged\n",
     "\n",
     "\n",
-    "def load_data(db, df_pop, df_birth):\n",
+    "def create_indexes(db):\n",
+    "    \"\"\"\n",
+    "    Create MongoDB indexes for query optimization.\n",
+    "    \"\"\"\n",
+    "    print(\"\\nCreating MongoDB indexes...\")\n",
+    "    \n",
+    "    db.population.create_index([(\"Jahr\", 1), (\"Bezirk\", 1)])\n",
+    "    db.births.create_index([(\"Jahr\", 1), (\"Bezirk\", 1)])\n",
+    "    db.merged_analysis.create_index([(\"Jahr\", 1), (\"Bezirk\", 1)])\n",
+    "    db.population.create_index(\"Geschlecht\")\n",
+    "    db.population.create_index(\"Alter\")\n",
+    "    \n",
+    "    print(\"  Created indexes for optimized queries\")\n",
+    "\n",
+    "\n",
+    "def create_aggregated_views(db):\n",
+    "    \"\"\"\n",
+    "    Create pre-aggregated views using MongoDB aggregation pipeline.\n",
+    "    \"\"\"\n",
+    "    print(\"\\nCreating aggregated views...\")\n",
+    "    \n",
+    "    pipeline_district_year = [\n",
+    "        {\n",
+    "            \"$group\": {\n",
+    "                \"_id\": {\"Jahr\": \"$Jahr\", \"Bezirk\": \"$Bezirk\"},\n",
+    "                \"total_population\": {\"$sum\": \"$Wien\"},\n",
+    "                \"foreign_born\": {\"$sum\": \"$Ausland\"},\n",
+    "                \"avg_age\": {\"$avg\": \"$Alter\"},\n",
+    "                \"record_count\": {\"$sum\": 1}\n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
+    "            \"$project\": {\n",
+    "                \"_id\": 0,\n",
+    "                \"Jahr\": \"$_id.Jahr\",\n",
+    "                \"Bezirk\": \"$_id.Bezirk\",\n",
+    "                \"total_population\": 1,\n",
+    "                \"foreign_born\": 1,\n",
+    "                \"avg_age\": 1,\n",
+    "                \"record_count\": 1\n",
+    "            }\n",
+    "        },\n",
+    "        {\"$out\": \"view_population_by_district\"}\n",
+    "    ]\n",
+    "    \n",
+    "    db.population.aggregate(pipeline_district_year)\n",
+    "    print(\"  Created view: view_population_by_district\")\n",
+    "    \n",
+    "    pipeline_yearly = [\n",
+    "        {\n",
+    "            \"$group\": {\n",
+    "                \"_id\": \"$Jahr\",\n",
+    "                \"total_births\": {\"$sum\": \"$Anzahl_Geburten\"},\n",
+    "                \"districts_count\": {\"$addToSet\": \"$Bezirk\"}\n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
+    "            \"$project\": {\n",
+    "                \"_id\": 0,\n",
+    "                \"Jahr\": \"$_id\",\n",
+    "                \"total_births\": 1,\n",
+    "                \"districts_count\": {\"$size\": \"$districts_count\"}\n",
+    "            }\n",
+    "        },\n",
+    "        {\"$sort\": {\"Jahr\": 1}},\n",
+    "        {\"$out\": \"view_yearly_statistics\"}\n",
+    "    ]\n",
+    "    \n",
+    "    db.births.aggregate(pipeline_yearly)\n",
+    "    print(\"  Created view: view_yearly_statistics\")\n",
+    "\n",
+    "\n",
+    "def load_data(db, df_pop, df_birth, df_merged):\n",
     "    \"\"\"\n",
     "    Load cleaned data into MongoDB.\n",
     "    \n",
@@ -415,9 +519,10 @@
     "        db: MongoDB database object\n",
     "        df_pop: Cleaned population DataFrame\n",
     "        df_birth: Cleaned birth DataFrame\n",
+    "        df_merged: Merged analysis DataFrame\n",
     "        \n",
     "    Returns:\n",
-    "        tuple: (population_count, birth_count) document counts\n",
+    "        dict: Document counts per collection\n",
     "    \"\"\"\n",
     "    print(\"\\n\" + \"=\"*70)\n",
     "    print(\"PHASE 3: LOAD\")\n",
@@ -427,31 +532,66 @@
     "    \n",
     "    try:\n",
     "        # Clear existing collections\n",
-    "        db[\"population\"].delete_many({})\n",
-    "        db[\"births\"].delete_many({})\n",
+    "        db.population.delete_many({})\n",
+    "        db.births.delete_many({})\n",
+    "        db.merged_analysis.delete_many({})\n",
     "        print(\"  Cleared existing collections\")\n",
     "        \n",
     "        # Insert new data\n",
     "        if len(df_pop) > 0:\n",
     "            records_pop = df_pop.to_dict(\"records\")\n",
-    "            db[\"population\"].insert_many(records_pop)\n",
+    "            db.population.insert_many(records_pop)\n",
     "        \n",
     "        if len(df_birth) > 0:\n",
     "            records_birth = df_birth.to_dict(\"records\")\n",
-    "            db[\"births\"].insert_many(records_birth)\n",
+    "            db.births.insert_many(records_birth)\n",
+    "        \n",
+    "        if len(df_merged) > 0:\n",
+    "            records_merged = df_merged.to_dict(\"records\")\n",
+    "            db.merged_analysis.insert_many(records_merged)\n",
     "        \n",
     "        # Verify counts\n",
-    "        count_pop = db[\"population\"].count_documents({})\n",
-    "        count_birth = db[\"births\"].count_documents({})\n",
+    "        count_pop = db.population.count_documents({})\n",
+    "        count_birth = db.births.count_documents({})\n",
+    "        count_merged = db.merged_analysis.count_documents({})\n",
     "        \n",
     "        print(f\"  Population: {count_pop:,} documents inserted\")\n",
     "        print(f\"  Births: {count_birth:,} documents inserted\")\n",
+    "        print(f\"  Merged Analysis: {count_merged:,} documents inserted\")\n",
     "        \n",
-    "        return count_pop, count_birth\n",
+    "        create_indexes(db)\n",
+    "        create_aggregated_views(db)\n",
+    "        \n",
+    "        return {\n",
+    "            'population': count_pop,\n",
+    "            'births': count_birth,\n",
+    "            'merged_analysis': count_merged\n",
+    "        }\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(f\"\\nERROR: Failed to load data into MongoDB - {e}\")\n",
     "        raise\n",
+    "\n",
+    "\n",
+    "def export_sample_data(db):\n",
+    "    \"\"\"\n",
+    "    Export sample data for verification.\n",
+    "    \"\"\"\n",
+    "    print(\"\\nExporting sample data...\")\n",
+    "    \n",
+    "    try:\n",
+    "        merged_sample = list(db.merged_analysis.find().limit(100))\n",
+    "        if merged_sample:\n",
+    "            df_sample = pd.DataFrame(merged_sample)\n",
+    "            if '_id' in df_sample.columns:\n",
+    "                df_sample = df_sample.drop('_id', axis=1)\n",
+    "            \n",
+    "            output_file = 'sample_merged_analysis.csv'\n",
+    "            df_sample.to_csv(output_file, index=False)\n",
+    "            print(f\"  Exported: {output_file}\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"  WARNING: Could not export samples - {e}\")\n",
     "\n",
     "\n",
     "def generate_statistics(df_pop, df_birth):\n",
@@ -517,10 +657,13 @@
     "        df_pop, df_birth = extract_data()\n",
     "        \n",
     "        # Transform\n",
-    "        df_pop_clean, df_birth_clean = transform_data(df_pop, df_birth)\n",
+    "        df_pop_clean, df_birth_clean, df_merged = transform_data(df_pop, df_birth)\n",
     "        \n",
     "        # Load\n",
-    "        count_pop, count_birth = load_data(db, df_pop_clean, df_birth_clean)\n",
+    "        counts = load_data(db, df_pop_clean, df_birth_clean, df_merged)\n",
+    "        \n",
+    "        # Export\n",
+    "        export_sample_data(db)\n",
     "        \n",
     "        # Statistics\n",
     "        generate_statistics(df_pop_clean, df_birth_clean)\n",
@@ -528,6 +671,13 @@
     "        print(\"\\n\" + \"=\"*70)\n",
     "        print(\"PIPELINE COMPLETED SUCCESSFULLY\")\n",
     "        print(\"=\"*70)\n",
+    "        \n",
+    "        print(\"\\nCreated collections:\")\n",
+    "        print(\"  - population: Raw population data\")\n",
+    "        print(\"  - births: Raw birth data\")\n",
+    "        print(\"  - merged_analysis: Merged data for ML/Analysis\")\n",
+    "        print(\"  - view_population_by_district: Aggregated view\")\n",
+    "        print(\"  - view_yearly_statistics: Yearly statistics\")\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(f\"\\nPIPELINE FAILED: {e}\")\n",
@@ -580,6 +730,9 @@
       "Transforming birth data...\n",
       "  Processed: 1,661 records\n",
       "\n",
+      "Merging data sources...\n",
+      "  Merged dataset: 24 records\n",
+      "\n",
       "======================================================================\n",
       "PHASE 3: LOAD\n",
       "======================================================================\n",
@@ -588,6 +741,17 @@
       "  Cleared existing collections\n",
       "  Population: 3,636 documents inserted\n",
       "  Births: 1,661 documents inserted\n",
+      "  Merged Analysis: 24 documents inserted\n",
+      "\n",
+      "Creating MongoDB indexes...\n",
+      "  Created indexes for optimized queries\n",
+      "\n",
+      "Creating aggregated views...\n",
+      "  Created view: view_population_by_district\n",
+      "  Created view: view_yearly_statistics\n",
+      "\n",
+      "Exporting sample data...\n",
+      "  Exported: sample_merged_analysis.csv\n",
       "\n",
       "======================================================================\n",
       "DATA STATISTICS\n",
@@ -610,11 +774,31 @@
       "PIPELINE COMPLETED SUCCESSFULLY\n",
       "======================================================================\n",
       "\n",
+      "Created collections:\n",
+      "  - population: Raw population data\n",
+      "  - births: Raw birth data\n",
+      "  - merged_analysis: Merged data for ML/Analysis\n",
+      "  - view_population_by_district: Aggregated view\n",
+      "  - view_yearly_statistics: Yearly statistics\n",
+      "\n",
       "MongoDB connection closed\n"
      ]
     }
    ],
-   "execution_count": 76
+   "execution_count": 79
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-07T21:13:06.966759Z",
+     "start_time": "2026-01-07T21:13:06.962996Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "bd58c337c5a90c9",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
