--- a/Main.ipynb
+++ b/Main.ipynb
@@ -121,6 +121,10 @@
     "    'use_docker': True\n",
     "}\n",
     "\n",
+    "#Da Probleme beim automatisiertem Download, direkt CSV Files im Projekt \n",
+    "#URL_BEVOELKERUNG = \"https://www.wien.gv.at/gogv/l9ogdviebezpopsexage5stkcobgeoat102008f\"\n",
+    "#URL_GEBURTEN = \"https://www.wien.gv.at/gogv/l9ogdviebezpopsexbir2002f\"\n",
+    "\n",
     "DATA_FILES = {\n",
     "    'population': 'vie-bez-pop-sex-age5-stk-cob-geoat10-2008f.csv',\n",
     "    'births': 'vie-bez-pop-sex-bir-2002f.csv'\n",
